# Pluto-Subgraph

./: Cargo.toml  jupiter-dex-substreams-v0.3.1.spkg  substreams.yaml
proto/sf/jupiter/v1/: types.proto
proto/sf/substreams/sink/database/v1/: database.proto
proto/sf/substreams/sink/sql/v1/: service.proto
src/: analytics.rs  balances.rs  global_prices.rs  jupiter_analytics.rs  jupiter_instructions.rs  jupiter_trading_store.rs  lib.rs  portfolio_store.rs  stats_store.rs  token_price_store.rs  transactions.rs
src/pb/: .last_generated_hash  mod.rs  sf.jupiter.v1.rs
