[package]
name = "jupiter-dex-substreams"
version = "0.2.0"
edition = "2021"
description = "Substreams modules for parsing Jupiter DEX activity on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Substreams core dependencies
substreams = "0.7"
substreams-solana = "0.14.2"

# Additional dependencies for Jupiter DEX
prost = "0.13"
prost-types = "0.13"
anyhow = "1.0"
hex = "0.4"
bs58 = "0.5"
chrono = "0.4.42"

# JWT Testing dependencies