[package]
name = "jupiter-dex-substreams"
version = "0.2.0"
edition = "2021"
description = "Substreams modules for parsing Jupiter DEX activity on Solana"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Substreams core dependencies
substreams = "0.7"
substreams-solana = "0.14.2"
substreams-database-change = "3.0.0"

# Additional dependencies for Jupiter DEX
prost = "0.13"
prost-types = "0.13"
anyhow = "1.0"
hex = "0.4"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }

# JWT Testing dependencies